--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <service
             android:name=".service.FirstService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".webviewfiledemo.WebViewActivity"></activity>
     </application>
 
 </manifest>
