--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MessengerActivity" />
+
+        <service
+            android:name=".MessengerService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
