--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -21,7 +21,13 @@
         <service
             android:name=".MessengerService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <service android:name=".LocalService"
+            android:enabled="true"
+            android:exported="true"/>
+
+        <activity android:name=".LocalBinderActivity"></activity>
     </application>
 
 </manifest>
