--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,13 @@
         <service
             android:name="com.mark.aidl.RemoteService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+        <service android:name=".service.MessengerService" android:enabled="true" android:exported="true">
+            <intent-filter>
+                <action android:name="com.zhy.aidl.calc"></action>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
