--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,13 +83,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".hadler.HandlerThread2Activity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-        <activity android:name=".floatwindow.GetFloatWindowDirectlyActivity"></activity>
+        <activity android:name=".floatwindow.GetFloatWindowDirectlyActivity" />
+        <activity android:name=".images.ImageActivity"></activity>
     </application>
 
 </manifest>
