--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
 
+    <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -94,7 +94,8 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".floatwindow.GetFloatWindowDirectlyActivity" />
-        <activity android:name=".images.ImageActivity"></activity>
+        <activity android:name=".images.ImageActivity" />
+        <activity android:name=".contentprovider.NoteActivity"></activity>
     </application>
 
 </manifest>
