--- a/clientapp/build.gradle
+++ b/clientapp/build.gradle
@@ -1,13 +1,26 @@
 apply plugin: 'com.android.application'
 
+// Create a variable called keystorePropertiesFile, and initialize it to your
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore.properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+
 android {
     signingConfigs {
         release {
-            keyAlias 'key0'
-            keyPassword '811224'
-            storeFile file('E:/git/app/jinhaiying.jks')
-            storePassword '811224'
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            //v2SigningEnabled false
         }
+
     }
     compileSdkVersion 26
     defaultConfig {
@@ -31,6 +44,9 @@ android {
         }
     }
 
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
