--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.clientapp">
 
+    <uses-permission android:name="com.example.notes.READ_CONTENT"/>
+    <uses-permission android:name="com.example.notes.WRITE_CONTENT"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
