--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.jin.myapplication">
 
     <permission
-        android:name="com.example.notes.READ_CONRENT"
+        android:name="com.example.notes.READ_CONTENT"
         android:label="Permission for read content provider"
         android:protectionLevel="normal"></permission>
     <permission
@@ -57,6 +57,7 @@
             android:process=":provider"
             android:exported="true"
             android:grantUriPermissions="true"
+            android:readPermission="com.example.notes.READ_CONTENT"
             android:writePermission="com.example.notes.WRITE_CONTENT"/>
 
         <receiver android:name=".broadcast.TestReceiver">
