--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,13 +48,11 @@
             android:name=".contentprovider.FirstContentProvider"
             android:authorities="jin.cp.FirstContentProvider" />
 
-        <!--android:readPermission="com.example.notes.READ_CONTENT"
-            android:writePermission="com.example.notes.WRITE_CONTENT"-->
-
+        <!--android:process=":provider"-->
         <provider
             android:name="com.example.jin.myapplication.contentprovider.NotesContentProvider"
             android:authorities="com.example.jin.NotesContentProvider"
-            android:process=":provider"
+
             android:exported="true"
             android:grantUriPermissions="true"
             android:readPermission="com.example.notes.READ_CONTENT"
