--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <provider
             android:name="com.example.jin.myapplication.contentprovider.NotesContentProvider"
             android:authorities="com.example.jin.NotesContentProvider"
-
+            android:process=":provider"
             android:exported="true"
             android:grantUriPermissions="true"
             android:readPermission="com.example.notes.READ_CONTENT"
