--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jin.myapplication">
+    package="com.example.jin.myapplication"
+    android:sharedUserId="com.example.jin.myapplication">
 
     <permission
         android:name="com.example.notes.READ_CONTENT"
