--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,8 @@
         <activity
             android:name=".fragment.SliderActivity"
             android:label="@string/title_activity_slider"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".calculate.CalculateActivity" />
     </application>
 
 </manifest>
