--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.clientapp">
 
-    <uses-permission android:name="com.example.notes.READ_CONTENT"/>
-    <uses-permission android:name="com.example.notes.WRITE_CONTENT"/>
+    <uses-permission android:name="com.example.notes.READ_CONTENT" />
+    <uses-permission android:name="com.example.notes.WRITE_CONTENT" />
 
     <application
         android:allowBackup="true"
@@ -43,10 +43,13 @@
         <activity android:name=".AccpetActivity">
             <intent-filter>
                 <action android:name="notes.intent.action.NOTE_VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.dir/NOTES" />
             </intent-filter>
         </activity>
+        <activity android:name=".client.MyAidlActivity"></activity>
     </application>
 
 </manifest>
