--- a/clientapp/src/main/AndroidManifest.xml
+++ b/clientapp/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
                 <data android:mimeType="vnd.android.cursor.dir/NOTES" />
             </intent-filter>
         </activity>
-        <activity android:name=".client.MyAidlActivity"></activity>
+        <activity android:name=".client.MyAidlActivity" />
     </application>
 
 </manifest>
